--- a/src/Article/Article.css
+++ b/src/Article/Article.css
@@ -17,7 +17,19 @@
   transform: scale(1.05);
 }
 
+.article-text-box {
+  width: 60%;
+}
+
 .article-img {
   width: 30%;
   border-radius: 10px;
+}
+
+.article-title {
+  font-size: 30px;
+  text-align: left;
+}
+.article-date {
+  text-align: right;
 }
