Add a div to contain article section and published date for styling, then add basic styling

--- a/src/Article/Article.css
+++ b/src/Article/Article.css
@@ -30,6 +30,7 @@
   font-size: 30px;
   text-align: left;
 }
-.article-date {
-  text-align: right;
+.article-details {
+  display: flex;
+  justify-content: space-between;
 }
