--- a/src/ArticleDetail/ArticleDetail.css
+++ b/src/ArticleDetail/ArticleDetail.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   margin: 4%;
   background-color: #f9f7f7;
-  padding: 2%;
+  padding: 2% 4%;
   border-radius: 20px;
 }
 
@@ -31,6 +31,7 @@
   width: 50%;
   align-self: center;
   border-radius: 20px;
+  margin: 10px 0;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -38,6 +39,7 @@
   width: 80%;
   align-self: center;
   font-style: italic;
+  margin: 10px 0;
 }
 
 .details-detail {
